# docker-kotlin

./: .gitignore  README.md  SUPPORTED_ENDPOINTS.md  build.gradle.kts  gradle.properties  wrangler.jsonc
.github/workflows/: docs.yml  integration-tests.yml  pr.yml  publish.yml
api/: docker-kotlin.api  docker-kotlin.klib.api
docs/: package.json  wrangler.jsonc
gradle/: libs.versions.toml
interop/: Cargo.toml  build.rs  cbindgen.toml  http_native.h
interop/src/: lib.rs
lib/: build.gradle.kts  gradle.properties
lib/.run/: Run Windows.run.xml
lib/api/: docker-kotlin.api  docker-kotlin.klib.api
lib/src/commonTest/kotlin/me/devnatan/dockerkt/: Client.kt
lib/src/nativeInterop/cinterop/: http_native.def
src/commonMain/kotlin/me/devnatan/dockerkt/: DockerClient.kt  DockerClientConfig.kt  DockerClientFactory.kt
src/commonMain/kotlin/me/devnatan/dockerkt/io/: FileSystemUtils.kt  Http.kt  Sockets.kt  Streaming.kt  TarFile.kt
src/commonMain/kotlin/me/devnatan/dockerkt/models/: HealthConfig.kt
src/commonMain/kotlin/me/devnatan/dockerkt/util/: Json.kt
src/commonTest/kotlin/me/devnatan/dockerkt/: Client.kt  TestUtils.kt
src/commonTest/kotlin/me/devnatan/dockerkt/io/: SocketsTest.kt  (+1 more)
src/jvmMain/kotlin/me/devnatan/dockerkt/: DockerClient.jvm.kt
src/linuxX64Main/kotlin/me/devnatan/dockerkt/: Platform.linux.kt
src/macosX64Main/kotlin/me/devnatan/dockerkt/: Platform.macos.kt
src/mingwX64Main/kotlin/me/devnatan/dockerkt/: Platform.mingwx64.kt  Platform.windows.kt
src/nativeMain/kotlin/me/devnatan/dockerkt/: DockerClient.native.kt  Platform.native.kt
(+54 files in other folders)
